tests/errors/error_type_add.nimmy
# Error: Cannot add incompatible types
let x = "hello" + 5